:sectanchors:
:sectlinks:
:source-highlighter: coderay
:experimental:
:toc: 
:toc-title!:
:toclevels: 0


== Changes between Counterclockwise 0.28.0 and 0.28.1

`0.28.1` released on September XX, 2014

== Enhancements

=== Leiningen / Clojure autodetection

- Added a check for missing `.classpath` file for Leiningen projects. Automatically reconstruct the java build path if it is missing.

== Changes between Counterclockwise 0.27.1 and 0.28.0

`0.28.0` released on September 25, 2014

== Enhancements

=== Automatic configuration of Leiningen Projects

In reaction to a project creation which contains a `project.clj` file, or an existing project modification consisting in adding a `project.clj` file, etc., CCW will by default react by adding the `Leiningen Nature` to the project. Meaning you'll see the `Leiningen Dependencies` Classpath Container appear in the project, and be able to launch it as a Leiningen project.

This feature can be disabled globally via the menu:Preferences[Clojure > General > Automatic detection of Clojure/Leiningen projects] preference

=== Project Drag and Drop from OS to Counterclockwise

It is possible to drag a project folder project from Windows Explorer / Finder onto Eclipse / Counterclockwise. Any Leiningen project found within the dragged folder(s) will automatically be created ; and configured appropriately if automatic configuration is enabled.

=== Project Drag and Drop from Github / Bitbucket / Google code to Counterclockwise

It is possible to drag a Github / Bitbucket / Google code  project URL from your browser to Eclipse / Counterclockwise. The standard Eclipse Git Import wizard will be open, pre-filled with repository information.

Once the project has been cloned, just select the `Create a general Project` option: a general project will be created, and if Automatic configuration is enabled, recognized as a Leiningen Project.

=== REPL Text Input Area visibility
