@@ -95,8 +95,8 @@ public final class ClojurePackageElementChangeListener implements
 	private void addClojureNature(final IProject[] projects) {
 		if (projects.length != 0) {
 			WorkspaceJob job = new ClojureNatureAdderWorkspaceJob(projects);
-			job.setUser(true);
-			job.setRule(projects[0].getParent());
+			job.setUser(false);
+			job.setRule(ResourcesPlugin.getWorkspace().getRoot());
 			job.schedule();
 		}
 	}
